--- a/app/src/main/res/navigation/navigation_graph_tab_settings.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_settings.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_graph_tab_settings.xml"
-    app:startDestination="@id/settings">
-
+    app:startDestination="@id/profile">
     <fragment
-        android:id="@+id/settings"
-        android:name="com.timenoteco.timenote.view.Settings"
-        android:label="fragment_settings"
-        tools:layout="@layout/fragment_settings" />
+        android:id="@+id/profile"
+        android:name="com.timenoteco.timenote.view.Profile"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
