--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorText">#000000</color>
     <color name="colorTextSecondary">#5A599D</color>
+    <color name="colorTextThirdly">#4A90E2</color>
 </resources>
