--- a/app/src/main/res/layout/fragment_preference_suggestion.xml
+++ b/app/src/main/res/layout/fragment_preference_suggestion.xml
@@ -31,7 +31,7 @@
             android:textSize="17sp" />
 
         <TextView
-            android:id="@+id/pref_sub_category_btn_done"
+            android:id="@+id/suggestion_ok_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
