--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,15 +5,235 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     tools:context=".view.Profile">
 
+     <LinearLayout
+         android:id="@+id/profile_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button"
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/pref_sub_category_toolbar"
+                style="@style/AppTheme.Toolbar"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                tools:ignore="MissingConstraints">
+
+                <TextView
+                    android:id="@+id/profile_name_toolbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textColor="@color/colorText"
+                    android:textSize="17sp"
+                    tools:text="Ronny" />
+
+                <ImageView
+                    android:id="@+id/profile_settings_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="16dp"
+                    android:src="@drawable/ic_settings_black_24dp" />
+
+                <ImageView
+                    android:id="@+id/profile_flag_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:src="@drawable/ic_flag_black_24dp" />
+
+            </androidx.appcompat.widget.Toolbar>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/pref_sub_category_toolbar">
+
+                <!-- **** Place Your Content Here **** -->
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:background="@drawable/too" />
+
+            </FrameLayout>
+        </LinearLayout>
+
+    <TextView
+        android:id="@+id/profile_nbr_followers"
+        tools:text="654"
+        android:textColor="@color/colorText"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_ll"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+    <TextView
+        android:id="@+id/profile_followers_label"
+        android:text="@string/followers"
+        tools:text="Followers"
+        android:textSize="15sp"
+        android:layout_marginStart="24dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_nbr_followers"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/profile_nbr_following"
+        tools:text="233"
+        android:textColor="@color/colorText"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="24dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_followers_label"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:text="@string/following"
+        tools:text="Following"
+        android:textSize="15sp"
+        android:layout_marginStart="24dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_nbr_following"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:id="@+id/profile_calendar_btn"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_ll"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_event_note_black_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:id="@+id/profile_pic_imageview"
+        android:src="@drawable/ic_pref_holiday_clicked"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_ll"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="92dp"
+        android:layout_height="92dp"/>
+
+    <TextView
+        android:id="@+id/profile_location"
+        android:textColor="@color/colorText"
+        android:textSize="14sp"
+        android:drawableStart="@drawable/ic_profile_from"
+        tools:text=" Israel"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_pic_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:layout_marginTop="16dp"
+        fancy:fb_defaultColor="@android:color/holo_orange_dark"
+        fancy:fb_radius="5dp"
+        fancy:fb_text="@string/modify"
+        android:paddingVertical="6dp"
+        android:paddingHorizontal="24dp"
+        fancy:fb_textColor="@android:color/white"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/profile_location"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/profile_modify_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+    <TextView
+        android:id="@+id/profile_desc"
+        tools:text="Founder of Timenote"
+        android:textSize="15sp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_modify_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        app:layout_constraintEnd_toStartOf="@id/profile_arrow_forward_btn"
+        android:id="@+id/profile_arrow_back_btn"
+        android:src="@drawable/ic_arrow_back_black_24dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_desc"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        app:layout_constraintEnd_toStartOf="@id/profile_view_type_btn"
+        android:id="@+id/profile_arrow_forward_btn"
+        android:src="@drawable/ic_arrow_forward_black_24dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_desc"
+        app:layout_constraintStart_toEndOf="@id/profile_arrow_back_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+    <ImageView
+        android:id="@+id/profile_view_type_btn"
+        android:src="@drawable/ic_view_list_black_24dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toStartOf="@id/profile_filter_btn"
+        app:layout_constraintTop_toBottomOf="@id/profile_desc"
+        app:layout_constraintStart_toEndOf="@id/profile_arrow_forward_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/profile_filter_btn"
+        android:src="@drawable/ic_view_module_black_24dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_desc"
+        app:layout_constraintStart_toEndOf="@id/profile_view_type_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+        <View
+            android:id="@+id/view_demarcation"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/profile_arrow_back_btn"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/too" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:background="#60aaaaaa"
+        tools:listitem="@layout/item_profile_timenote_list_style"
+        app:layout_constraintTop_toBottomOf="@+id/view_demarcation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
