--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,4 +2,6 @@
 <resources>
     <attr name="colorText" format="reference|color" />
     <attr name="colorTextSecondary" format="reference|color" />
+    <attr name="colorTextThirdly" format="reference|color" />
+
 </resources>
