--- a/app/src/main/res/layout/adapter_pref_sub_category_card.xml
+++ b/app/src/main/res/layout/adapter_pref_sub_category_card.xml
@@ -36,7 +36,7 @@
             app:layout_constraintTop_toBottomOf="@id/pref_sub_category_title_category"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/colorText"
+            android:background="#60000000"
             android:layout_width="match_parent"
             android:layout_height="0.1dp"/>
 
