--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -228,12 +228,16 @@
             android:background="@drawable/too" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/profile_rv"
+        android:paddingTop="8dp"
         android:background="#60aaaaaa"
+        android:paddingBottom="56dp"
         tools:listitem="@layout/item_profile_timenote_list_style"
         app:layout_constraintTop_toBottomOf="@+id/view_demarcation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
