--- a/app/src/main/res/layout/fragment_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_tab_profile.xml
@@ -4,6 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tab_profile_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+
     <fragment
         android:id="@+id/tab_profile_nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
