--- a/app/src/main/res/navigation/navigation_graph_tab_home.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_home.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/home">
     <fragment
         android:id="@+id/home"
-        android:name="com.timenoteco.timenote.view.Home"
+        android:name="com.timenoteco.timenote.view.homeFlow.Home"
         android:label="Home" >
         <action
             android:id="@+id/action_home_to_fakeFragment"
