--- a/app/src/main/res/layout/fragment_preference_category.xml
+++ b/app/src/main/res/layout/fragment_preference_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.PreferenceCategory">
+    tools:context=".view.loginFlow.PreferenceCategory">
 
     <androidx.appcompat.widget.Toolbar
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
