--- a/app/src/main/res/layout/fragment_preference_suggestion.xml
+++ b/app/src/main/res/layout/fragment_preference_suggestion.xml
@@ -5,7 +5,7 @@
     android:id="@+id/rootSuggestions"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.PreferenceSuggestion">
+    tools:context=".view.loginFlow.PreferenceSuggestion">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
