--- a/app/src/main/res/layout/fragment_profile_calendar.xml
+++ b/app/src/main/res/layout/fragment_profile_calendar.xml
@@ -27,10 +27,11 @@
         android:id="@+id/profile_calendar_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:clipToPadding="false"
         android:paddingTop="8dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:paddingBottom="56dp"
+        android:layout_marginBottom="56dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
