--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.Settings">
+    tools:context=".view.profileFlow.Settings">
 
     <LinearLayout
         android:id="@+id/profile_settings_ll"
@@ -32,14 +32,11 @@
 
         </androidx.appcompat.widget.Toolbar>
 
-
-
-
     </LinearLayout>
 
 
     <ScrollView
-        android:background="#60aaaaaa"
+        android:background="#20aaaaaa"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profile_settings_ll"
