--- a/app/src/main/res/layout/fragment_tab_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_tab_create_timenote.xml
@@ -4,12 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tab_create_timenote_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+
     <fragment
-        android:id="@+id/tab_profile_nav_host_fragment"
+        android:id="@+id/tab_create_timenote_nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/navigation_graph_tab_profile" />
+        app:navGraph="@navigation/navigation_graph_tab_create_timenote" />
 
 </RelativeLayout>
