--- a/app/src/main/res/layout/item_profile_timenote_list_style.xml
+++ b/app/src/main/res/layout/item_profile_timenote_list_style.xml
@@ -8,9 +8,9 @@
     android:padding="8dp"
     android:layout_marginEnd="-10dp"
     android:layout_marginStart="8dp"
-    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
     android:background="@android:color/white"
-    android:elevation="4dp"
+    android:elevation="5dp"
     tools:targetApi="lollipop">
 
     <androidx.constraintlayout.widget.ConstraintLayout
