--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,6 +15,12 @@
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/navigation_graph_tab_5"
+        android:icon="@drawable/ic_delete_sweep_black_24dp"
+        android:title=""
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/navigation_graph_tab_3"
         android:icon="@android:drawable/ic_popup_reminder"
         android:title=""
