--- a/app/src/main/res/navigation/navigation_graph_tab_search.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_search.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/search"
-        android:name="com.timenoteco.timenote.view.Search"
+        android:name="com.timenoteco.timenote.view.searchFlow.Search"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
 </navigation>
