--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -18,10 +18,8 @@
     <TextView
         android:id="@+id/timenote_username"
         android:layout_marginStart="8dp"
-        android:textStyle="bold"
         tools:text="username"
-        android:textSize="16sp"
-        android:textColor="@color/colorText"
+        android:textSize="14sp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,11 +29,22 @@
     <TextView
         android:id="@+id/timenote_place"
         tools:text="34 Ohio Street"
-        android:textColor="@color/colorTextThirdly"
+        android:textAllCaps="true"
+        android:textColor="@color/colorTextSecondary"
         android:textSize="12sp"
+        android:textStyle="bold"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
         app:layout_constraintTop_toBottomOf="@id/timenote_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:src="@drawable/ic_more_vert_black_24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -49,6 +58,102 @@
         app:layout_constraintTop_toBottomOf="@id/timenote_pic_user_imageview"
         android:layout_width="match_parent"
         android:layout_height="250dp"/>
+
+    <TextView
+        android:shadowDy="1"
+        android:shadowDx="1"
+        android:shadowRadius="1.5"
+        android:shadowColor="@android:color/black"
+        android:id="@+id/timenote_title"
+        android:textSize="18sp"
+        android:text="BEACH PARTY"
+        android:textColor="@android:color/white"
+        android:textAllCaps="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="@id/timenote_pic_imageview"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:shadowDy="1"
+        android:shadowDx="1"
+        android:shadowRadius="1.5"
+        android:shadowColor="@android:color/black"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="104dp"
+        android:id="@+id/timenote_year"
+        android:text="2020"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@id/separator_1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:shadowDy="1"
+        android:shadowDx="1"
+        android:shadowRadius="1.5"
+        android:shadowColor="@android:color/black"
+        android:layout_marginBottom="8dp"
+        android:id="@+id/separator_1"
+        android:background="@android:color/white"
+        app:layout_constraintEnd_toStartOf="@id/timenote_day_month"
+        app:layout_constraintStart_toEndOf="@id/timenote_year"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        android:layout_width="1dp"
+        android:layout_height="48dp"/>
+
+    <TextView
+        android:shadowDy="1"
+        android:shadowDx="1"
+        android:shadowRadius="1.5"
+        android:shadowColor="@android:color/black"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:id="@+id/timenote_day_month"
+        android:text="10\nAug"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@id/separator_2"
+        app:layout_constraintStart_toEndOf="@id/separator_1"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:shadowDy="1"
+        android:shadowDx="1"
+        android:shadowRadius="1.5"
+        android:shadowColor="@android:color/black"
+        android:layout_marginBottom="8dp"
+        android:id="@+id/separator_2"
+        android:background="@android:color/white"
+        app:layout_constraintEnd_toStartOf="@id/timenote_time"
+        app:layout_constraintStart_toEndOf="@id/timenote_day_month"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        android:layout_width="1dp"
+        android:layout_height="48dp"/>
+
+    <TextView
+        android:shadowDy="1"
+        android:shadowDx="1"
+        android:shadowRadius="1.5"
+        android:shadowColor="@android:color/black"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="104dp"
+        android:id="@+id/timenote_time"
+        android:text="15:25"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/separator_2"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <ImageView
         app:layout_constraintStart_toStartOf="parent"
@@ -71,45 +176,36 @@
         android:layout_height="wrap_content"/>
 
     <ImageView
-        android:src="@drawable/ic_telegram"
-        android:id="@+id/timenote_share"
-        app:layout_constraintStart_toEndOf="@id/timenote_comment"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_add_circle_black_24dp"
         app:layout_constraintTop_toBottomOf="@id/timenote_pic_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
-        tools:text="354 likes"
-        android:textStyle="bold"
-        android:textColor="@color/colorText"
-        android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@id/timenote_like"
+        android:breakStrategy="simple"
         android:layout_marginTop="8dp"
-        android:id="@+id/timenote_like_number"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="8dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:textSize="12sp"
-        tools:text="username"
+        tools:text="#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party"
         android:id="@+id/timenote_username_desc"
         android:textColor="@color/colorText"
-        app:layout_constraintTop_toBottomOf="@id/timenote_like_number"
+        app:layout_constraintTop_toBottomOf="@id/timenote_like"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        tools:targetApi="m" />
 
     <TextView
-        android:id="@+id/timenote_see_comments"
-        tools:text="Voir les 354 commentaires"
+        android:id="@+id/timenote_see_more"
+        android:textColor="@color/colorText"
+        android:text="@string/see_more"
         android:textSize="12sp"
-        android:layout_marginTop="4dp"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/timenote_username_desc"
