--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,31 +4,31 @@
 
     <item
         android:id="@+id/navigation_graph_tab_1"
-        android:icon="@android:drawable/ic_dialog_info"
+        android:icon="@drawable/ic_home_bnv"
         android:title=""
         app:showAsAction="always" />
 
     <item
         android:id="@+id/navigation_graph_tab_2"
-        android:icon="@android:drawable/ic_dialog_dialer"
+        android:icon="@drawable/ic_location_bnv"
         android:title=""
         app:showAsAction="always" />
 
     <item
         android:id="@+id/navigation_graph_tab_5"
-        android:icon="@drawable/ic_delete_sweep_black_24dp"
+        android:icon="@drawable/logo"
         android:title=""
         app:showAsAction="always" />
 
     <item
         android:id="@+id/navigation_graph_tab_3"
-        android:icon="@android:drawable/ic_popup_reminder"
+        android:icon="@drawable/ic_search_bnv"
         android:title=""
         app:showAsAction="always" />
 
     <item
         android:id="@+id/navigation_graph_tab_4"
-        android:icon="@android:drawable/ic_dialog_alert"
+        android:icon="@drawable/ic_home_bnv"
         android:title=""
         app:showAsAction="always" />
 
