--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,24 +8,27 @@
     android:background="@android:color/white"
     tools:context=".view.searchFlow.Search">
 
-    <com.paulrybitskyi.persistentsearchview.PersistentSearchView
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp"
-        app:queryInputBarIconColor="@android:color/darker_gray"
-        app:queryInputHintColor="@android:color/darker_gray"
+    <com.mancj.materialsearchbar.MaterialSearchBar
+        app:mt_roundedSearchBarEnabled="true"
+        android:padding="12dp"
+        app:mt_searchBarColor="#03DAC5"
+        app:mt_searchIconTint="@android:color/white"
+        app:mt_placeholderColor="@android:color/white"
+        app:mt_placeholder="Search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:isVoiceInputButtonEnabled="false"
-        app:isProgressBarEnabled="true"
-        app:isDismissableOnTouchOutside="true"
-        android:id="@+id/persistent_searchview"
-        android:padding="4dp"
+        style="@style/MaterialSearchBarLight"
+        app:mt_speechMode="false"
+        app:mt_hint="Search People, Tags..."
+        app:mt_maxSuggestionsCount="10"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/searchBar" />
 
     <com.google.android.material.tabs.TabLayout
-        app:layout_constraintTop_toBottomOf="@id/persistent_searchview"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/searchBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/search_tablayout"
