--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -17,7 +17,6 @@
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
-            android:background="@color/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:id="@+id/profile_settings_toolbar"
             style="@style/AppTheme.Toolbar"
@@ -28,10 +27,15 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/settings"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="17sp"/>
 
         </androidx.appcompat.widget.Toolbar>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/too" />
 
     </LinearLayout>
 
@@ -46,6 +50,7 @@
         android:layout_height="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -63,7 +68,7 @@
 
             <TextView
                 android:id="@+id/profile_settings_edit_personnal_infos"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 android:textColor="@android:color/black"
                 android:text="@string/edit_my_personnals_informations"
@@ -85,7 +90,7 @@
 
             <TextView
                 android:id="@+id/profile_settings_change_password"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 android:textColor="@android:color/black"
                 android:text="@string/change_password"
@@ -106,7 +111,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/private_account_cl"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@id/card_line_1"
                 app:layout_constraintStart_toStartOf="parent"
@@ -146,7 +151,7 @@
 
             <TextView
                 android:id="@+id/profile_settings_asked_sent"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 android:textColor="@android:color/black"
                 android:text="@string/asked_sent"
@@ -171,7 +176,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_marginTop="8dp"
                 android:id="@+id/push_notification_cl"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@id/push_label"
                 app:layout_constraintStart_toStartOf="parent"
@@ -210,7 +215,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/push_notification_certified_cl"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@id/card_line_3"
                 app:layout_constraintStart_toStartOf="parent"
@@ -253,7 +258,7 @@
             <TextView
                 android:layout_marginTop="8dp"
                 android:id="@+id/profile_settings_date_format"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 android:textColor="@android:color/black"
                 android:text="@string/timenote_date_format"
@@ -274,7 +279,7 @@
 
             <TextView
                 android:id="@+id/profile_settings_timenote_format"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 android:textColor="@android:color/black"
                 android:text="@string/timenote_visibility_format"
@@ -295,7 +300,7 @@
 
             <TextView
                 android:id="@+id/profile_settings_timenote_visibility"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 android:textColor="@android:color/black"
                 android:text="@string/timenote_visibility"
@@ -319,7 +324,7 @@
 
             <TextView
                 android:id="@+id/profile_settings_confidentiality_politic"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 android:layout_marginTop="8dp"
                 android:textColor="@android:color/black"
@@ -332,7 +337,7 @@
 
             <TextView
                 android:id="@+id/profile_settings_send_comments"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 android:textColor="@android:color/black"
                 android:text="@string/send_comments"
@@ -348,7 +353,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="24dp"
-                android:background="@android:color/white"
+                android:background="#20aaaaaa"
                 android:padding="16dp"
                 android:gravity="center"
                 android:text="@string/disconnect"
