--- a/app/src/main/res/layout/fragment_near_by.xml
+++ b/app/src/main/res/layout/fragment_near_by.xml
@@ -13,16 +13,20 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         tools:context=".MapsFragment" />
 
     <TextView
+        android:shadowDy="1"
+        android:shadowDx="1"
+        android:shadowRadius="1.5"
+        android:shadowColor="@android:color/black"
         android:drawablePadding="8dp"
         android:drawableStart="@drawable/ic_toolbar_location"
         android:text="Tel Aviv"
         android:id="@+id/nearby_place"
         android:textSize="17sp"
-        android:textColor="@color/colorTextSecondary"
+        android:textColor="@android:color/white"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toTopOf="@id/map"
@@ -31,13 +35,17 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:shadowDy="1"
+        android:shadowDx="1"
+        android:shadowRadius="1.5"
+        android:shadowColor="@android:color/black"
         android:text="Today"
         android:id="@+id/nearby_time"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/map"
-        android:textColor="@color/colorTextSecondary"
+        android:textColor="@android:color/white"
         android:textSize="17sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
