--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -41,7 +41,7 @@
                     android:src="@drawable/ic_settings_black_24dp" />
 
                 <ImageView
-                    android:id="@+id/profile_flag_btn"
+                    android:id="@+id/profile_notif_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
